# huishoudboekje-nl-design-system-demo

./: .cypress-cucumber-preprocessorrc.json  .editorconfig  .env  .eslintrc.js  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  checklist.yaml  componenten.drawio  cypress.config.js  cypress.env.json  dex.dev.yaml  docker-compose.dev.yaml  docker-compose.yaml  keycloak_hhb.py  package-lock.json  package.json  publiccode.yaml  python.mk  readme_deploy_minikube.md  readme_deploy_ocp.md  tart  test.dockerfile  test.txt
backend/: .dockerignore  Dockerfile  Makefile  README.md  dev.Dockerfile  environment.yaml  gunicorn.conf.py  requirements.txt  setup.cfg  setup.py  test_requirements.txt  wsgi.py
backend/app/: README.md  index.js  main.py  package-lock.json  package.json
backend/camtParser/: __init__.py  camt053 voorbeeldbestand.xml  parser.py
backend/docker/: start.sh
backend/docs/: HHB ERD.drawio
backend/etc/: client_secrets.json  hhb-test.client_secrets.json
backend/helm/: Chart.yaml  values-minikube.yaml  values-prod.yaml  values.yaml
backend/helm/templates/: deployment.yaml
backend/hhb_backend/: app.py  config.py  content_type_validation.py  custom_oidc.py  reverse_proxy.py  utils.py  version.py
backend/hhb_backend/alarm_evaluation/: __init__.py  evaluation_message.py  journal_entry_model.py  settings.py
backend/hhb_backend/audit_logging/: __init__.py  log_item.py  settings.py
backend/hhb_backend/auth/: __init__.py  (+3 more)
backend/hhb_services/: manage.py
backend/tests/: __init__.py  conftest.py
(+3998 files in other folders)
